# ChangeLog for dev-perl/Astro-FITS-Header
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Astro-FITS-Header/ChangeLog,v 1.28 2012/06/24 12:59:36 tove Exp $

  24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Update CPAN upstream info

  31 Mar 2012; Torsten Veller <tove@gentoo.org> -Astro-FITS-Header-3.0.ebuild:
  Cleanup

  19 Mar 2012; Raúl Porcel <armin76@gentoo.org>
  Astro-FITS-Header-3.30.0.ebuild:
  ia64/s390/sh/sparc stable wrt #400035

  08 Mar 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  Astro-FITS-Header-3.30.0.ebuild:
  x86 stable wrt bug #400035

  29 Feb 2012; Markus Meier <maekke@gentoo.org>
  Astro-FITS-Header-3.30.0.ebuild:
  arm stable, bug #400035

  27 Feb 2012; Brent Baude <ranger@gentoo.org> Astro-FITS-Header-3.30.0.ebuild:
  Marking Astro-FITS-Header-3.30.0 ppc for bug 400035

  27 Feb 2012; Jeroen Roovers <jer@gentoo.org> Astro-FITS-Header-3.30.0.ebuild:
  Stable for HPPA (bug #400035).

  25 Feb 2012; Tobias Klausmann <klausman@gentoo.org>
  Astro-FITS-Header-3.30.0.ebuild:
  Stable on alpha, bug #400035

  24 Feb 2012; Agostino Sarubbo <ago@gentoo.org>
  Astro-FITS-Header-3.30.0.ebuild:
  Stable for amd64, wrt bug #400035

  04 Sep 2011; Torsten Veller <tove@gentoo.org> -Astro-FITS-Header-3.30.ebuild:
  Cleanup

*Astro-FITS-Header-3.30.0 (01 Sep 2011)

  01 Sep 2011; Torsten Veller <tove@gentoo.org>
  +Astro-FITS-Header-3.30.0.ebuild:
  Change version scheme

  03 Apr 2011; Torsten Veller <tove@gentoo.org> -Astro-FITS-Header-3.01.ebuild:
  Cleanup

*Astro-FITS-Header-3.30 (13 Jan 2011)

  13 Jan 2011; Torsten Veller <tove@gentoo.org> +Astro-FITS-Header-3.30.ebuild:
  Version bump

  21 Jan 2010; Torsten Veller <tove@gentoo.org>
  Astro-FITS-Header-3.0.ebuild:
  mips -> ~mips

*Astro-FITS-Header-3.01 (18 Mar 2009)

  18 Mar 2009; Torsten Veller <tove@gentoo.org>
  +Astro-FITS-Header-3.01.ebuild:
  Version bump
