@@ -2,13 +2,15 @@
 Hash: SHA256
 
 DIST Astro-FITS-Header-3.03.tar.gz 108592 RMD160 cfc3365d06ba8e2b44ddbbc3f3433cea13cb6b87 SHA1 656924d70878da2e10144eff5de7e37add7c67f8 SHA256 e396fb6bd984e79199f45a04cc17147a0327a886898860ba0adc4854ea490541
+DIST Astro-FITS-Header-3.05.tar.gz 105888 RMD160 3ae0612a9924255c9e77417add870c0e20a49efc SHA1 fff7bf500a30c6a1ec2b7f74572107dc7326c7cf SHA256 8a94927052931ca48af9134a419138278d03f6ee9fee8106e5439ccccd6d805b
 EBUILD Astro-FITS-Header-3.30.0.ebuild 527 RMD160 cabe10bbd9648cc91679b7bd3b49fa2be758b2ea SHA1 64cf4ce5b35f92351665731e1679772e8d4bd8ac SHA256 f7d58295d77743ae6194e7b9fa8db9f0f47cc6a3df1dd5e4ec5c16c8ae20d513
-MISC ChangeLog 3394 RMD160 148d4d77e61fdda64b3bbe772d02becd957ac670 SHA1 04e610900ca88ecb893adae9bab8f7621664b68e SHA256 65ae2fa1c42c628858f46d2501bb5b669a37f5d3b60829505bd3ff4c69e454c7
+EBUILD Astro-FITS-Header-3.50.0.ebuild 534 RMD160 cb799cf4e270735df412c83ae8d7c822204cabb5 SHA1 9dcabb38579a74e6e8087bd08831bf0a113588a2 SHA256 9efaa734d7d9b2c156a2729a8cb2b66f5e744ab8dcd27b7fcfa958079c0d5f73
+MISC ChangeLog 3535 RMD160 6790af9c2978952572c4137eeafdc6850f03093b SHA1 01ed308094c672f2fa44f99fb8ed6aa1d92c6d0e SHA256 7e28990151e82db71232da14da6741975c0a8565d948dd2569e2e9bab408c01d
 MISC metadata.xml 745 RMD160 f5a013fc45a9ad83347252bbb540dee4f07c762b SHA1 1473b24903538d5004badaf55ac50e19ea0398da SHA256 3e022d9cf009ea28b06f65d0386491abace01735322d17674d9ba4e42e1717bd
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAk/nD38ACgkQV3J2n04EauzMcwCfbxe2qchp/uCi7wy+FIioClvo
-XGYAoKOG+As3BafILj8gxVGhyvt330mm
-=0YsZ
+iEYEAREIAAYFAk/sqqsACgkQV3J2n04EauyicACfRDRgYu27e1ctxN0FWZl4gYwz
+j3IAoIwmMYpTBx7da2BbIB+gKmPHrh5P
+=n0ZA
 -----END PGP SIGNATURE-----
