@@ -2,13 +2,15 @@
 Hash: SHA256
 
 DIST Cache-Memcached-Fast-0.17.tar.gz 91917 RMD160 b084d84c13f754e760b6288c909fcee43bfcc77f SHA1 57bd3a78c7293bc34ebaa5bc435fe1c263839a54 SHA256 de951d390a481bd92a965084a0e0fce304541ee002673af87595622d7fa60a74
+DIST Cache-Memcached-Fast-0.19.tar.gz 93883 RMD160 3ab4c2b44d657eef5e3afc9c7d1ba40a919fbb03 SHA1 502630a137a6f7e6d103c6d72e849f6c327356f6 SHA256 75340f00302b39562211b37909ef2d73fd99f28ba7c90b4af205de506affd82c
 EBUILD Cache-Memcached-Fast-0.170.0.ebuild 454 RMD160 b175ec3702f029819130b5d8742d6efb0e5a7c8e SHA1 48830426965793222f13f7eb7e23c6a50bb2c2b2 SHA256 24c6f76766cf7fa82b363e98dc744048962b9c9727847252179c58bac5733496
-MISC ChangeLog 1553 RMD160 8169842b88a37b8ded91cc4236008df2643c17bb SHA1 75519bfcc6eec60d90055b67bed66365f092008a SHA256 199889818e250347c100ead572c508acfad774f96ae4a8a91f15000998f23d37
+EBUILD Cache-Memcached-Fast-0.190.0.ebuild 454 RMD160 c21f8ca29eb4220b3c840c8811bcaba2c19d647e SHA1 e7ddcc342017ec209cdd66f2f188dd564f503205 SHA256 b47098409cdb80c78a075233c444ce1b97ac7d890f2240542620f588d8a8af2c
+MISC ChangeLog 1703 RMD160 81858282ed8df0d0bb126250d474c823ddba2244 SHA1 c7437cfcf2b61989c02f8af4fd8af722933b4764 SHA256 d9fa371f7cef5b12504931c3960c90484ad67582933b0a65c3caf035ea836fbf
 MISC metadata.xml 434 RMD160 875ee417156b6e51a790da6721a0310315fa5201 SHA1 8f3a87f5c01cb1cbc832c32eac8838ab5c4c8019 SHA256 450c0b311d4d85fcede6fc78b67ef501e8a1183216fe9e979eeca9ddd8ff696c
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAk/nD4AACgkQV3J2n04EauwWJwCeN+uXpkevRmd28FLycmyGsIiQ
-js8An16iQhRREYLjsEQ1K/IwpGf3DP9u
-=kB4f
+iEYEAREIAAYFAk/sq40ACgkQV3J2n04Eauwi+QCfX3zrJwYVkE2NMJGERBImC8P1
+gPkAoLsSouOfEvMt+ru2rirm6OisiDy5
+=NDC6
 -----END PGP SIGNATURE-----
