@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/Astro-FITS-Header
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Astro-FITS-Header/ChangeLog,v 1.28 2012/06/24 12:59:36 tove Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Astro-FITS-Header/ChangeLog,v 1.29 2012/06/28 19:04:06 tove Exp $
+
+*Astro-FITS-Header-3.50.0 (28 Jun 2012)
+
+  28 Jun 2012; Torsten Veller <tove@gentoo.org>
+  +Astro-FITS-Header-3.50.0.ebuild:
+  Version bump
 
   24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
   Update CPAN upstream info
